need to fix heading spacing

--- a/src/components/FAQ.module.css
+++ b/src/components/FAQ.module.css
@@ -1,7 +1,4 @@
 .container {
-    /* margin: 0 auto;
-    max-width: 150rem;
-    padding: 0 2.2rem 0 0; */
     margin: 0 auto;
     max-width: 150rem;
     padding: 0 9.62rem 0 9.6rem;
@@ -10,22 +7,18 @@
 .text {
     display: inline-block; 
     font-weight: 400;
-    line-height: 1;
     text-align: left;
     font-size: 2.4rem;
     margin-bottom: 1.8rem;
+    margin-top: 0.813rem;
 }
 
-.text:last-child {
-    padding-bottom: 0;
-}
 
 .title {
     color: var(--color-primary-400);
     font-size: 2.8rem;
     text-align: left;
-    line-height: 1.5;
-    padding-bottom: 0.25rem;
+    line-height: 1;
 }
 
 @media screen and (max-width: 768px) {
